--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "styled-components": "^3.3.0"
   },
   "scripts": {
-    "start": "NODE_PATH=src react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env NODE_PATH=src react-scripts start",
+    "build": "cross-env react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "precommit": "lint-staged",
