--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "cross-env": "^5.1.6",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.0",
